0.3.3
Added 'Hide Tab' to keyboard shortcuts ( defaults to ^h, 'Delete Word Under Cursor' now defaults to ^d ).
Restored missing translations.
Moving a line or selection with keyboard now keeps line/selection on screen.
Session restore and session manager now remember visibilty of tabs.
Fixed refresh bug.
Added 'Show All Tabs' to edit menu.
Added 'Hide Tab' to tab popup menu.
Search boxes on toolbar now always active.
Fixed replace all when replace string contains find string.
Lowered version numbers for vte lib for older distros.
Fixed some minor gtk2/3 filename clashes.
Fixed losing bookmark positions when replace all, replace all ( regex ) and revert file.
Fixed not updating status bar after showing all instances replaced.
Speeded up replace all.
Status bar in gtk3 version now smaller.
Tweaked installed styles to show 'whitespace' better.
Added 'Show Whitespace' to prefs and view menu.
Added 'Show Whitspace' option.
VTE dev files failure in configure now gives more details.

0.3.2
Back history now shows line:tabname - truncated line ( length of line is same as func def length ), in menu.
Added 'Online Help' option.
Added Back/Forward menus to toolbar buttons.
New icons for gtk3 version ( thanks to David Reimer for that ).
Supplied plugins are now also side-by-side installable for both versions.
More sensible default prefs.
File/folders renamed to make gtk3 version completly installable side-by-side with gtk2 version.
Added --enable-plugins to configure.
Added extra instructions to INSTALL for building with plugins.
Code clean to remove compile warnings for packagers.
Max forward/back history can now be set from prefs.
History now works much more like a browser and makes sense!
Increased Forward/Back history.
Fixed bug when removing certain tool items in prefs dialog.
'Back and 'Forward' now remember last 10 jumps.
Added 'Forward' to navigation menu and as extra button to toolbar.